# taey

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.txt  docker-compose.yml  pyproject.toml  requirements.txt
cmake/: ccache.cmake
examples/: clip.cpp  config.yaml  realsense.cpp  rs.cpp  tum.cpp
include/taey/: CLIP.h  Camera.h  FramePoint.h  ImageEncoder.h  KeyFrame.h  Map.h  MapPoint.h  Optimizer.h  TAEY.h  TUM.h  Visualizer.h  types.h  utils.h
libs/tensorrt-cpp-api/: CMakeLists.txt
models/: encoder.py
ros2/: CMakeLists.txt  README.md  package.xml
ros2/install/: local_setup.sh  setup.sh
ros2/install/taey/share/taey/: package.bash  package.zsh
ros2/log/: latest_build
ros2/src/: taey_node.cpp
ros2/src/taey/: CMakeLists.txt  package.xml
ros2/src/taey/src/: taey_node.cpp
scripts/: __init__.py  clip.py  dinov2.py  engine.py  export_siglip2.py  siglip2.py
src/: CLIP.cpp  Camera.cpp  FramePoint.cpp  ImageEncoder.cpp  KeyFrame.cpp  Map.cpp  MapPoint.cpp  Optimizer.cpp  TAEY.cpp  TUM.cpp  Visualizer.cpp  utils.cpp
