<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2024 Robotics and AI Institute LLC dba RAI Institute. All rights reserved.
-->
<package format="3">
  <name>spot_ros2_control</name>
  <version>0.0.0</version>
  <description>Package for using ROS 2 to use TAEY SLAM algorithm</description>
  <maintainer email="wakrson@gmail.com">Mark Robinson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-yaml</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>